# tacho_crypto

./: .gitignore  Cargo.toml  README.md
tacho_cert_common/: Cargo.toml
tacho_cert_common/src/: bcddate.rs  keyidentifier.rs  lib.rs  timereal.rs
tacho_cert_common/src/keyidentifier/: authority.rs  authority_id.rs  equipment.rs
tacho_cert_common/src/keyidentifier/authority_id/: ids.rs
tacho_certs_app/: Cargo.toml
tacho_certs_app/src/: lib.rs
tacho_certs_ui/: Cargo.toml
tacho_certs_ui/src/: editctx.rs  editwidget.rs  lib.rs
tacho_certs_ui/src/cert/: certedit.rs  mod.rs
tacho_certs_ui/src/editwidget/: hex.rs  octets.rs
tacho_certs_ui/src/util/: asciislice.rs  macros.rs  mod.rs
tacho_g2_ca_verifier/: Cargo.toml
tacho_g2_ca_verifier/.cargo/: config.toml
tacho_g2_ca_verifier/src/: getrandom_impl.rs  main.rs
tacho_g2_country_lister/: Cargo.toml
tacho_g2_country_lister/src/: main.rs
tacho_g2_crypto/: Cargo.toml
tacho_g2_crypto/src/: lib.rs
tacho_g2_crypto/src/auth/: auth_token.rs  cmac.rs  mod.rs
tacho_g2_crypto/src/cert/: anycurvesignature.rs  equipmenttype.rs  g2authorization.rs  g2cert.rs  g2certraw.rs  mod.rs
tacho_g2_crypto/src/ec/: affine_point.rs  encoded_point.rs  mod.rs  non_zero_scalar.rs  public_key.rs  secret_key.rs  signature.rs  signing_key.rs  verifying_key.rs
tacho_g2_crypto/src/ecdh/: diffie_hellman.rs  ephemeral_secret.rs  mod.rs  shared_secret.rs
tacho_g2_crypto/src/session/: aes.rs  kdf.rs  mod.rs  session_key.rs
tacho_g2_msca_downloader/: Cargo.toml
tacho_g2_msca_downloader/src/: main.rs
tacho_g2_vu_esp32c3/: Cargo.toml
tacho_g2_vu_esp32c3/.cargo/: config.toml
tacho_g2_vu_esp32c3/src/: main.rs
tacho_msca_server/: .gitignore  Cargo.toml
tacho_msca_server/src/: main.rs
